--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Jambofy",
+  "name": "OVDRify",
   "version": "0.1.1",
-  "description": "Improves boring youtube thumbnails by adding Jambo the cat.",
+  "description": "Improves boring youtube thumbnails by adding OVDR.",
   "host_permissions": [ "https://www.youtube.com/*"],
   "content_scripts":
   [
