--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
       "128": "assets/icons/icon-128.png"
     },
     "default_popup": "popup.html",
-    "default_title": "Jambofyer"
+    "default_title": "OVDRifyer"
   },
   "icons":
   {
